force-app/main/default/objects/AuditTrailWatcherSetting__mdt/AuditTrailWatcherSetting__mdt.object-meta.xml
<CustomObject>
    <label>Audit Trail Watcher Setting</label>
    <pluralLabel>Audit Trail Watcher Settings</pluralLabel>
</CustomObject>