force-app/main/default/objects/AuditTrailWatcherSetting__mdt/fields/DefaultDaysToLookBack__c.field-meta.xml
<CustomField>
    <fullName>DefaultDaysToLookBack__c</fullName>
    <description>Number of days to look back when the batch runs for the first time (no previous job found).</description>
    <label>Default Days To Look Back</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>