force-app/main/default/objects/AuditTrailWatcherSetting__mdt/fields/EmailTemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateDeveloperName__c</fullName>
    <description>Developer name of the email template used for notifications.</description>
    <label>Email Template Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>