force-app/main/default/objects/AuditTrailWatcherSetting__mdt/fields/OrgWideEmailDisplayName__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailDisplayName__c</fullName>
    <description>Display name of the Org Wide Email Address used for sending notifications.</description>
    <label>Org Wide Email Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>